# libhcs4QHCS

./: .gitignore  CMakeLists.txt  README.md
QHCS_bench/: QHCS_bench.cpp  pcs_matrix.cpp  pcs_matrix.h
include/: libhcs.h
include/libhcs/: pcs.h  pcs_qat_offload.h
src/: pcs.c  pcs_qat_offload.c  pcs_qat_offload.h~
src/com/: util.c
test/: example.cpp  example.cpp~
